--- a/BabySpa/BabySpa.csproj
+++ b/BabySpa/BabySpa.csproj
@@ -173,8 +173,21 @@
     <Content Include="favicon.ico" />
     <Content Include="Global.asax" />
     <Content Include="Content\Site.css" />
+    <Content Include="img\bath.png" />
+    <Content Include="img\baby spa.jpg" />
+    <Content Include="img\bg-pattern-1.jpg" />
+    <Content Include="img\bg-pattern-2.jpg" />
+    <Content Include="img\bg-pattern-3.jpg" />
+    <Content Include="img\bg-pattern-4.jpg" />
+    <Content Include="img\IMG_0411.JPG" />
+    <Content Include="img\IMG_0422.JPG" />
+    <Content Include="img\IMG_0427.JPG" />
+    <Content Include="img\IMG_0696.JPG" />
+    <Content Include="img\IMG_0935.JPG" />
     <Content Include="img\lightbox\default-skin.png" />
     <Content Include="img\lightbox\preloader.gif" />
+    <Content Include="img\logo_png_1.png" />
+    <Content Include="img\logo_png_2.png" />
     <Content Include="img\overlays\01.png" />
     <Content Include="img\overlays\02.png" />
     <Content Include="img\overlays\03.png" />
@@ -244,6 +257,9 @@
     <Content Include="Content\bootstrap-reboot.css.map" />
     <Content Include="Content\bootstrap-grid.min.css.map" />
     <Content Include="Content\bootstrap-grid.css.map" />
+    <Content Include="font\MnDown.ttf" />
+    <Content Include="font\MonAstronCTT.ttf" />
+    <Content Include="font\MonTaurus.ttf" />
     <None Include="Scripts\jquery-3.1.1.intellisense.js" />
     <Content Include="Scripts\jquery-3.1.1.js" />
     <Content Include="Scripts\jquery-3.1.1.min.js" />
