--- a/BabySpa/Web.config
+++ b/BabySpa/Web.config
@@ -4,6 +4,20 @@
   https://go.microsoft.com/fwlink/?LinkId=301880
   -->
 <configuration>
+  <configSections>
+    <sectionGroup name="applicationSettings" type="System.Configuration.ApplicationSettingsGroup, System, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089">
+      <section name="BabySpa.Properties.Settings" type="System.Configuration.ClientSettingsSection, System, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" requirePermission="false" />
+    </sectionGroup>
+    <section name="entityFramework" type="System.Data.Entity.Internal.ConfigFile.EntityFrameworkSection, EntityFramework, Version=6.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" requirePermission="false" />
+    <!-- For more information on Entity Framework configuration, visit http://go.microsoft.com/fwlink/?LinkID=237468 -->
+  </configSections>
+  <connectionStrings>
+    <add name="DefaultConnection" connectionString="user id=sa;password='123';data source='WADE-PC\SQLEXPRESS';initial catalog=babyspa;" providerName="System.Data.SqlClient" />
+    <add name="ConStr" connectionString="user id=sa;password='123';data source='WADE-PC\SQLEXPRESS';initial catalog=babyspa;" providerName="System.Data.SqlClient" />
+    <!--<add name="DefaultConnection" connectionString="user id=sa;password='mgld@tgal!1934';data source='WIN-4HMGVECF03T';initial catalog=LeXPro_prod;" providerName="System.Data.SqlClient" />
+    <add name="ConStr" connectionString="user id=sa;password='mgld@tgal!1934';data source='WIN-4HMGVECF03T';initial catalog=LeXPro_prod;" providerName="System.Data.SqlClient" />-->
+    <add name="InsContext" connectionString="Data Source=(localdb)\MSSQLLocalDB; Initial Catalog=InsContext-20171114153646; Integrated Security=True; MultipleActiveResultSets=True; AttachDbFilename=|DataDirectory|InsContext-20171114153646.mdf" providerName="System.Data.SqlClient" />
+  </connectionStrings>
   <appSettings>
     <add key="WriteLog" value="Y" />
     <add key="WriteTestLog" value="Y" />
@@ -13,9 +27,20 @@
     <add key="ClientValidationEnabled" value="true" />
     <add key="UnobtrusiveJavaScriptEnabled" value="true" />
   </appSettings>
+
   <system.web>
     <compilation debug="true" targetFramework="4.6.1" />
     <httpRuntime targetFramework="4.6.1" />
+    <pages>
+      <namespaces>
+        <add namespace="System.Web.Helpers" />
+        <add namespace="System.Web.Mvc" />
+        <add namespace="System.Web.Mvc.Ajax" />
+        <add namespace="System.Web.Mvc.Html" />
+        <add namespace="System.Web.Routing" />
+        <add namespace="System.Web.WebPages" />
+      </namespaces>
+    </pages>
     <httpModules>
       <add name="ApplicationInsightsWebTracking" type="Microsoft.ApplicationInsights.Web.ApplicationInsightsHttpModule, Microsoft.AI.Web" />
     </httpModules>
